--- a/Files/geracao_procedural/phisics/phisics.meta/jmi.config
+++ b/Files/geracao_procedural/phisics/phisics.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"phisics.java","referencedClasses":["chunkgen","terreno","TerreController"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"phisics.java","referencedClasses":["TerreController","chunkgen"],"referencesUpdatedV2":true}
