--- a/Files/geracao_procedural/TerreController.meta/jmi.config
+++ b/Files/geracao_procedural/TerreController.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"TerreController.java","referencedClasses":["chunkgen","Water","malha"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"TerreController.java","referencedClasses":["Water","chunkgen","malha"],"referencesUpdatedV2":true}
