--- a/Files/geracao_procedural/chunkgen.meta/jmi.config
+++ b/Files/geracao_procedural/chunkgen.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"chunkgen.java","referencedClasses":["TerreController","item"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"chunkgen.java","referencedClasses":["item","TerreController"],"referencesUpdatedV2":true}
