--- a/Files/geracao_procedural/malha.meta/jmi.config
+++ b/Files/geracao_procedural/malha.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"malha.java","referencedClasses":["chunkgen"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"malha.java","referencedClasses":["chunkgen","chunkSimul"],"referencesUpdatedV2":true}
