--- a/Files/geracao_procedural/Water.meta/jmi.config
+++ b/Files/geracao_procedural/Water.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"Water.java","referencedClasses":["chunkgen","malha"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"Water.java","referencedClasses":["chunkgen","malha","chunkSimul"],"referencesUpdatedV2":true}
