--- a/Files/player/playe.meta/jmi.config
+++ b/Files/player/playe.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"playe.java","referencedClasses":["phisics","onoffinvent"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"playe.java","referencedClasses":["onoffinvent","phisics"],"referencesUpdatedV2":true}
