upload file player

--- a/Files/player/script/inventario_coleta/CraftItem.meta/jmi.config
+++ b/Files/player/script/inventario_coleta/CraftItem.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"CraftItem.java","referencedClasses":["item","arma","espada","tocha","invertore"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"CraftItem.java","referencedClasses":["arma","espada","tocha","invertore","item"],"referencesUpdatedV2":true}
