upload file player

--- a/Files/player/script/inventario_coleta/Logic_The_Item/arma.meta/jmi.config
+++ b/Files/player/script/inventario_coleta/Logic_The_Item/arma.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"arma.java","referencedClasses":["item","atributo","AnimItem"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"arma.java","referencedClasses":["AnimItem","atributo","item"],"referencesUpdatedV2":true}
