upload file player

--- a/Files/player/script/inventario_coleta/Logic_The_Item/espada.meta/jmi.config
+++ b/Files/player/script/inventario_coleta/Logic_The_Item/espada.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"espada.java","referencedClasses":["item","arma"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"espada.java","referencedClasses":["arma","item"],"referencesUpdatedV2":true}
