upload file player

--- a/Files/player/script/inventario_coleta/Logic_The_Item/tocha.meta/jmi.config
+++ b/Files/player/script/inventario_coleta/Logic_The_Item/tocha.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"tocha.java","referencedClasses":["item","atributo"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"tocha.java","referencedClasses":["atributo","item"],"referencesUpdatedV2":true}
