upload file player

--- a/Files/player/script/inventario_coleta/selectslot.meta/jmi.config
+++ b/Files/player/script/inventario_coleta/selectslot.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"selectslot.java","referencedClasses":["removeItem","item","onoffinvent","invertore"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"selectslot.java","referencedClasses":["invertore","item","onoffinvent","removeItem"],"referencesUpdatedV2":true}
