upload file player

--- a/Files/player/script/test.meta/jmi.config
+++ b/Files/player/script/test.meta/jmi.config
@@ -1,1 +1,1 @@
-{"autoCompleteData":{"varMap":{}},"originalFileName":"test.java","referencedClasses":["item","arma","espada"],"referencesUpdatedV2":true}
+{"autoCompleteData":{"varMap":{}},"originalFileName":"test.java","referencedClasses":["arma","espada","item"],"referencesUpdatedV2":true}
